# sherpa-rs

./: .gitignore  .gitmodules  BUILDING.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  download_models.sh
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/scripts/: bump.js  dist_digest.js  notes.js
.github/workflows/: build.yml  lint.yml  publish.yml  test.yml
crates/sherpa-rs/: Cargo.toml
crates/sherpa-rs-sys/: Cargo.toml  build.rs  checksum.txt  dist.json  wrapper.h
crates/sherpa-rs-sys/src/: download_binaries.rs  lib.rs
crates/sherpa-rs/src/: audio_tag.rs  cohere_transcribe.rs  diarize.rs  dolphin.rs  embedding_manager.rs  funasr_nano.rs  keyword_spot.rs  language_id.rs  lib.rs  medasr.rs  moonshine.rs  omnilingual.rs  paraformer.rs  punctuate.rs  sense_voice.rs  silero_vad.rs  speaker_id.rs  ten_vad.rs  transducer.rs  tts.rs  utils.rs  vad.rs  whisper.rs  zipformer.rs
crates/sherpa-rs/src/streaming/: config.rs  mod.rs  recognizer.rs  stream.rs
crates/sherpa-rs/src/tts/: kitten.rs  kokoro.rs  matcha.rs  mod.rs  vits.rs  zipvoice.rs
crates/sherpa-rs/tests/: funasr_nano_test.rs  offline_recognizers.rs  streaming_test.rs  test_utils.rs
examples/: add_punctuation.rs  audio_tag.rs  basic_use.rs  diarize.rs  diarize_whisper.rs  dolphin.rs  funasr_nano.rs  keyword_spot.rs  language_id.rs  medasr.rs  moonshine.rs  non_streaming_decode_files.rs  omnilingual.rs  paraformer.rs  paraformer_streaming.rs  parakeet.rs  punctuate.rs  pyannote.rs  sense_voice.rs  server_engine.rs  speaker_embedding.rs  speaker_id.rs  streaming_asr.rs  streaming_decode_files.rs  transcribe.rs  transcribe_test.rs  transducer.rs  transducer_vosk.rs  tts.rs  tts_kitten.rs  tts_kokoro.rs  tts_matcha.rs  tts_vits.rs  tts_zipvoice.rs  vad.rs  vad_segment.rs  vad_silero.rs  vad_ten.rs  vad_whisper.rs  whisper.rs  (+1 more)
examples/tauri-app/: .gitignore  README.md  bun.lockb  index.html  package.json
examples/tauri-app/src/: main.ts
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/src/: lib.rs
script/: setup_cuda.ps1
src/: audio_tag.rs  common_config.rs  diarize.rs  embedding_manager.rs  keyword_spot.rs  language_id.rs  lib.rs  punctuate.rs  recognizer.rs  speaker_id.rs  speaker_identify.rs  stream.rs  tts.rs  utils.rs  vad.rs  whisper.rs  zipformer.rs
src/recognizer/: offline_recognizer.rs  online_recognizer.rs
src/stream/: offline_stream.rs  online_stream.rs
src/transcribe/: whisper.rs
sys/: Cargo.toml  build.rs  dist.txt
sys/src/internal/: dirs.rs
