[workspace]
members = ["sys"]

[package]
name = "sherpa-rs"
version = "0.4.1"
edition = "2021"
authors = ["thewh1teagle"]
license = "MIT"
repository = "https://github.com/thewh1teagle/sherpa-rs"
description = "Rust bindings to https://github.com/k2-fsa/sherpa-onnx"
readme = "README.md"
keywords = [
    "audio",
    "embeddings",
    "speech-recognition",
    "sherpa",
    "diarization",
]

[dependencies]
eyre = "0.6.12"
hound = { version = "3.5.1" }
log = "0.4.22"
sherpa-rs-sys = { path = "sys", version = "0.4.1" }

[dev-dependencies]
clap = { version = "4.5.8", features = ["derive"] }

[features]
default = ["download-binaries", "tts"]
download-binaries = ["sherpa-rs-sys/download-binaries"]
tts = ["sherpa-rs-sys/tts"]
cuda = ["sherpa-rs-sys/cuda"]
directml = ["sherpa-rs-sys/directml"]

[[example]]
name = "tts"
required-features = ["tts"]
