[package]
name = "sherpa-rs-sys"
version = "0.1.0"
edition = "2021"
authors = ["thewh1teagle"]
homepage = "https://github.com/thewh1teagle/sherpa-rs"
repository = "https://github.com/thewh1teagle/sherpa-rs"

include = [
    "sherpa-onnx/cmake",
    "sherpa-onnx/CMakeLists.txt",
    "sherpa-onnx/LICENSE",
    "sherpa-onnx/sherpa-onnx/c-api.cc",
    "sherpa-onnx/sherpa-onnx/c-api.h",
    "src/*.rs",
    "build.rs",
    "wrapper.h",
]

[build-dependencies]
bindgen = "0.69.4"
fs_extra = "1.3"
cmake = "0.1"
