[package]
name = "sherpa-rs-sys"
version = "0.1.7-beta.0"
edition = "2021"
authors = ["thewh1teagle"]
homepage = "https://github.com/thewh1teagle/sherpa-rs"
repository = "https://github.com/thewh1teagle/sherpa-rs"
license = "MIT"
description = "Rust bindings to https://github.com/k2-fsa/sherpa-onnx"
keywords = [
    "audio",
    "embeddings",
    "speech-recognition",
    "sherpa",
    "diarization",
]

include = [
    "sherpa-onnx/sherpa-onnx/c-api",
    "sherpa-onnx/sherpa-onnx/CMakeLists.txt",
    "sherpa-onnx/sherpa-onnx/csrc",
    "sherpa-onnx/sherpa-onnx/jni",
    "sherpa-onnx/cmake",
    "sherpa-onnx/toolchains",
    "sherpa-onnx/c-api-examples",
    "sherpa-onnx/android",
    "sherpa-onnx/CMakeLists.txt",
    "sherpa-onnx/LICENSE",
    "sherpa-onnx/.clang*",
    "src/*.rs",
    "build.rs",
    "wrapper.h",
]

[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1"
glob = "0.3.1"

[features]
default = []
tts = []
cuda = []
directml = []
