[package]
name = "sherpa-rs-sys"
version = "0.4.1"
edition = "2021"
authors = ["thewh1teagle"]
homepage = "https://github.com/thewh1teagle/sherpa-rs"
repository = "https://github.com/thewh1teagle/sherpa-rs"
license = "MIT"
description = "Rust bindings to https://github.com/k2-fsa/sherpa-onnx"
keywords = [
    "audio",
    "embeddings",
    "speech-recognition",
    "sherpa",
    "diarization",
]

include = [
    "sherpa-onnx/sherpa-onnx/c-api",
    "sherpa-onnx/sherpa-onnx/CMakeLists.txt",
    "sherpa-onnx/sherpa-onnx/csrc",
    "sherpa-onnx/sherpa-onnx/jni",
    "sherpa-onnx/cmake",
    "sherpa-onnx/toolchains",
    "sherpa-onnx/c-api-examples",
    "sherpa-onnx/android",
    "sherpa-onnx/CMakeLists.txt",
    "sherpa-onnx/LICENSE",
    "sherpa-onnx/.clang*",
    "src/*.rs",
    "build.rs",
    "wrapper.h",
    "dist.txt",
]

[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1"
glob = "0.3.1"
# Download binaries
ureq = { version = "2.1", optional = true, default-features = false, features = [
    "tls",
    "socks-proxy",
] }
tar = { version = "0.4", optional = true }
bzip2 = { version = "0.4.4", optional = true }
flate2 = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true }

[features]
download-binaries = ["ureq", "tar", "bzip2", "flate2", "sha2"]
default = []
tts = []
cuda = []
directml = []
