[package]
name = "sherpa-rs"
version = "0.6.6"
edition = "2021"
authors = ["thewh1teagle"]
license = "MIT"
repository = "https://github.com/thewh1teagle/sherpa-rs"
description = "Rust bindings to https://github.com/k2-fsa/sherpa-onnx"
readme = "../../README.md"
keywords = [
    "audio",
    "embeddings",
    "speech-recognition",
    "sherpa",
    "diarization",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eyre = "0.6.12"
hound = { version = "3.5.1" }
sherpa-rs-sys = { path = "../sherpa-rs-sys", version = "0.6.6", default-features = false }
tracing = "0.1.40"

[dev-dependencies]
clap = { version = "4.5.8", features = ["derive"] }

[features]
default = ["download-binaries", "tts"]
download-binaries = ["sherpa-rs-sys/download-binaries"]
static = ["sherpa-rs-sys/static"]
sys = []
tts = ["sherpa-rs-sys/tts"]
cuda = ["sherpa-rs-sys/cuda"]
directml = ["sherpa-rs-sys/directml"]

[[example]]
name = "tts_kitten"
path = "../../examples/tts_kitten.rs"

[[example]]
name = "tts_kokoro"
required-features = ["tts"]
path = "../../examples/tts_kokoro.rs"

[[example]]
name = "tts_vits"
required-features = ["tts"]
path = "../../examples/tts_vits.rs"

[[example]]
name = "tts_matcha"
required-features = ["tts"]
path = "../../examples/tts_matcha.rs"

[[example]]
name = "audio_tag"
path = "../../examples/audio_tag.rs"

[[example]]
name = "keyword_spot"
path = "../../examples/keyword_spot.rs"

[[example]]
name = "punctuate"
path = "../../examples/punctuate.rs"

[[example]]
name = "speaker_id"
path = "../../examples/speaker_id.rs"

[[example]]
name = "vad_silero"
path = "../../examples/vad_silero.rs"

[[example]]
name = "vad_ten"
path = "../../examples/vad_ten.rs"

[[example]]
name = "vad_whisper"
path = "../../examples/vad_whisper.rs"

[[example]]
name = "zipformer"
path = "../../examples/zipformer.rs"

[[example]]
name = "diarize"
path = "../../examples/diarize.rs"

[[example]]
name = "language_id"
path = "../../examples/language_id.rs"

[[example]]
name = "speaker_embedding"
path = "../../examples/speaker_embedding.rs"

[[example]]
name = "vad_segment"
path = "../../examples/vad_segment.rs"

[[example]]
name = "whisper"
path = "../../examples/whisper.rs"

[[example]]
name = "moonshine"
path = "../../examples/moonshine.rs"

[[example]]
name = "sense_voice"
path = "../../examples/sense_voice.rs"

[[example]]
name = "paraformer"
path = "../../examples/paraformer.rs"

[[example]]
name = "transducer"
path = "../../examples/transducer.rs"

[[example]]
name = "transducer_vosk"
path = "../../examples/transducer_vosk.rs"

[[example]]
name = "dolphin"
path = "../../examples/dolphin.rs"

[[example]]
name = "parakeet"
path = "../../examples/parakeet.rs"
